# mt2

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  wheels.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: benchmark.py  benchmark_comparison.py  benchmark_lester_v_lally.py  mc.ipynb  mc.py  plot_constraints.py
mt2/: __init__.py  diagnostics.py  impl.py
src/: lester_mt2_bisect_v2.h  lester_mt2_bisect_v3.h  lester_mt2_bisect_v4.h  lester_mt2_bisect_v7.h  main.cpp  mt2_Lallyver2.h  mt2_bisect.h
src/_mt2/: lester_mt2_bisect_v7.h  main.cpp  mt2_Lallyver2.h  mt2_bisect.h
src/mt2/: __init__.py  diagnostics.py
tests/: __init__.py  common.py  test_collinear_endpoint_cases.py  test_mt2.py  test_mt2_lally.py  test_mt2_tombs.py
