[project]
name = "mt2"
version = "1.2.3"
description = "Stransverse mass computation as a numpy ufunc."
authors = [
    { name = "Tom Gillam", email = "tpgillam@googlemail.com" },
    { name = "Rupert Tombs" },
    { name = "Christopher Lester" },
]
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["mt2"]
dependencies = ["numpy>=1.19.3"]
requires-python = ">= 3.9"
urls = { Homepage = "https://github.com/tpgillam/mt2" }

[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# FIXME: this is a workaround; see:
#   - https://github.com/astral-sh/uv/issues/9513
#   - https://github.com/pypa/setuptools/issues/4759
license-files = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "pyright==1.1.394",
    "ruff==0.9.6",
    "setuptools>=75.8.0",
]

[tool.ruff]
output-format = "concise"
