[project]
name = "mt2"
version = "1.3.1"
description = "Stransverse mass computation as a numpy ufunc."
authors = [
    { name = "Tom Gillam", email = "tpgillam@googlemail.com" },
    { name = "Rupert Tombs" },
    { name = "Christopher Lester" },
]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["mt2"]
dependencies = ["numpy>=1.19.3"]
requires-python = ">= 3.9"
urls = { Homepage = "https://github.com/tpgillam/mt2" }

[build-system]
requires = ["setuptools>=77", "numpy"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "pyright==1.1.406",
    "ruff==0.14.0",
    "setuptools>=75.8.0",
]

[tool.ruff]
output-format = "concise"
